--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: 子非鱼
-subtitle: This is where I will tell my friends way too much about me
+subtitle: 安知鱼之乐
 use-site-title: true
 ---
 
